Update index.html added footer and link to privacy-policy

--- a/index.html
+++ b/index.html
@@ -66,5 +66,8 @@
       Install the Extension Now
     </a>
   </p>
+  <footer>
+  <p>© 2025 Your Company Name. <a href="/privacy-policy">Privacy Policy</a></p>
+</footer>
 </body>
 </html>
