--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </a>
   </p>
   <footer>
-  <p>© 2025 Your Company Name. <a href="/privacy-policy">Privacy Policy</a></p>
+  <p>© 2025 <a href="https://mounirben26.github.io/g-calendar/privacy-policy.html">Privacy Policy</a></p>
 </footer>
 </body>
 </html>
